<resources>
    <string name="app_name">OmadaDemo</string>
    <string name="search_hint">Search photos...</string>
    <string name="search_button_description">Search button</string>
    <string name="photo_thumbnail_description">Photo thumbnail</string>
    <string name="photo_detail_description">Photo detail view</string>

    <!-- Photo Detail Screen -->
    <string name="photographer">Photographer</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="views">Views</string>
    <string name="favorites">Favorites</string>
    <string name="comments">Comments</string>
    <string name="share">Share</string>
    <string name="view_on_flickr">View on Flickr</string>

    <!-- Full-Screen Image Viewer -->
    <string name="close">Close</string>
</resources>